--- a/client/styles/_fonts.scss
+++ b/client/styles/_fonts.scss
@@ -19,14 +19,14 @@
  * 
  * © 2016 MyFonts Inc
 */
-@font-face {font-family: 'SkyhookMono';
-	src: url('fonts/3165CE_0_0.eot');
-	src: url('fonts/3165CE_0_0.eot?#iefix') format('embedded-opentype'),
-		url('fonts/3165CE_0_0.woff2') format('woff2'),
-		url('fonts/3165CE_0_0.woff') format('woff'),
-		url('fonts/3165CE_0_0.ttf') format('truetype'),
-		url('fonts/3165CE_0_0.svg#wf') format('svg');
-}
+// @font-face {font-family: 'SkyhookMono';
+// 	src: url('fonts/3165CE_0_0.eot');
+// 	src: url('fonts/3165CE_0_0.eot?#iefix') format('embedded-opentype'),
+// 		url('fonts/3165CE_0_0.woff2') format('woff2'),
+// 		url('fonts/3165CE_0_0.woff') format('woff'),
+// 		url('fonts/3165CE_0_0.ttf') format('truetype'),
+// 		url('fonts/3165CE_0_0.svg#wf') format('svg');
+// }
 
 // Permian Serif
 /**
@@ -66,43 +66,46 @@
 * 
 * Ilya Ruderman
 */
-@font-face {
-    font-family: 'PermianSerif';
-    src: url('fonts/permianserif_regular_macroman/PermianSerifTypeface-webfont.eot');
-    src: url('fonts/permianserif_regular_macroman/PermianSerifTypeface-webfont.eot?#iefix') format('embedded-opentype'),
-         url('fonts/permianserif_regular_macroman/PermianSerifTypeface-webfont.woff') format('woff'),
-         url('fonts/permianserif_regular_macroman/PermianSerifTypeface-webfont.ttf') format('truetype'),
-         url('fonts/permianserif_regular_macroman/PermianSerifTypeface-webfont.svg#permianseriftypefaceregular') format('svg');
-    font-weight: normal;
-    font-style: normal;
-}
-@font-face {
-    font-family: 'PermianSerif';
-    src: url('fonts/permianserif_bold_macroman/PermianSerifTypeface-Bold-webfont.eot');
-    src: url('fonts/permianserif_bold_macroman/PermianSerifTypeface-Bold-webfont.eot?#iefix') format('embedded-opentype'),
-         url('fonts/permianserif_bold_macroman/PermianSerifTypeface-Bold-webfont.woff') format('woff'),
-         url('fonts/permianserif_bold_macroman/PermianSerifTypeface-Bold-webfont.ttf') format('truetype'),
-         url('fonts/permianserif_bold_macroman/PermianSerifTypeface-Bold-webfont.svg#permianseriftypefaceregular') format('svg');
-    font-weight: bold;
-    font-style: normal;
-}
-@font-face {
-    font-family: 'PermianSerif';
-    src: url('fonts/permianserif_italic_macroman/PermianSerifTypeface-Italic-webfont.eot');
-    src: url('fonts/permianserif_italic_macroman/PermianSerifTypeface-Italic-webfont.eot?#iefix') format('embedded-opentype'),
-         url('fonts/permianserif_italic_macroman/PermianSerifTypeface-Italic-webfont.woff') format('woff'),
-         url('fonts/permianserif_italic_macroman/PermianSerifTypeface-Italic-webfont.ttf') format('truetype'),
-         url('fonts/permianserif_italic_macroman/PermianSerifTypeface-Italic-webfont.svg#permianseriftypefaceregular') format('svg');
-    font-weight: normal;
-    font-style: italic;
-}
+// @font-face {
+//     font-family: 'PermianSerif';
+//     src: url('fonts/permianserif_regular_macroman/PermianSerifTypeface-webfont.eot');
+//     src: url('fonts/permianserif_regular_macroman/PermianSerifTypeface-webfont.eot?#iefix') format('embedded-opentype'),
+//          url('fonts/permianserif_regular_macroman/PermianSerifTypeface-webfont.woff') format('woff'),
+//          url('fonts/permianserif_regular_macroman/PermianSerifTypeface-webfont.ttf') format('truetype'),
+//          url('fonts/permianserif_regular_macroman/PermianSerifTypeface-webfont.svg#permianseriftypefaceregular') format('svg');
+//     font-weight: normal;
+//     font-style: normal;
+// }
+// @font-face {
+//     font-family: 'PermianSerif';
+//     src: url('fonts/permianserif_bold_macroman/PermianSerifTypeface-Bold-webfont.eot');
+//     src: url('fonts/permianserif_bold_macroman/PermianSerifTypeface-Bold-webfont.eot?#iefix') format('embedded-opentype'),
+//          url('fonts/permianserif_bold_macroman/PermianSerifTypeface-Bold-webfont.woff') format('woff'),
+//          url('fonts/permianserif_bold_macroman/PermianSerifTypeface-Bold-webfont.ttf') format('truetype'),
+//          url('fonts/permianserif_bold_macroman/PermianSerifTypeface-Bold-webfont.svg#permianseriftypefaceregular') format('svg');
+//     font-weight: bold;
+//     font-style: normal;
+// }
+// @font-face {
+//     font-family: 'PermianSerif';
+//     src: url('fonts/permianserif_italic_macroman/PermianSerifTypeface-Italic-webfont.eot');
+//     src: url('fonts/permianserif_italic_macroman/PermianSerifTypeface-Italic-webfont.eot?#iefix') format('embedded-opentype'),
+//          url('fonts/permianserif_italic_macroman/PermianSerifTypeface-Italic-webfont.woff') format('woff'),
+//          url('fonts/permianserif_italic_macroman/PermianSerifTypeface-Italic-webfont.ttf') format('truetype'),
+//          url('fonts/permianserif_italic_macroman/PermianSerifTypeface-Italic-webfont.svg#permianseriftypefaceregular') format('svg');
+//     font-weight: normal;
+//     font-style: italic;
+// }
+
+
+@import url(https://fonts.googleapis.com/css?family=Dosis:400,300|Lato:400,700,900);
 
 // $font-family-monospace:   Menlo, Monaco, Consolas, "Courier New", monospace;
-$font-family-sans-serif:  "Helvetica Neue", Helvetica, Arial, sans-serif;
-$font-family-serif:       'PermianSerif', Georgia, "Times New Roman", Times, serif;
-$font-family-base:        $font-family-serif;
+$font-family-sans-serif:  'Lato', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+$font-family-serif:       'Playfair Display', Georgia, "Times New Roman", Times, serif;
+$font-family-base:        $font-family-sans-serif;
 
 
-$headings-font-family: 'SkyhookMono', $font-family-sans-serif;
+$headings-font-family: 'Dosis', $font-family-sans-serif;
 
 $font-size-base: 18px;
