--- a/client/styles/_landing.scss
+++ b/client/styles/_landing.scss
@@ -12,7 +12,8 @@
 
 	.slide{
 
-		@extend .fg-col-xs;
+		@extend .fg-row;
+		// @extend .fg-col-xs;
 		flex-grow:1;
 		align-items: center;
 		justify-content: center;
@@ -30,7 +31,7 @@
 			@extend .fg-col-xs-12;
 			@extend .fg-col-sm-6;
 			@media screen and (max-width: $fg-md - 1) {
-				max-height: calc(70vh - #{$space*10});
+				// max-height: calc(70vh - #{$space*10});
 				flex-basis: auto;
 			}
 
@@ -42,8 +43,11 @@
 			flex-grow:2;
 			@media screen and (min-width: $fg-md) {
 				max-height: calc(100vh - #{$space*10});
-				flex-basis: 100vh;
+				// flex-basis: 100vh;
 				flex-shrink:0;
+			}
+			@media screen and (max-width: $fg-sm - 1) {
+				max-height: calc(60vh - #{$space*10});
 				
 			}
 
@@ -58,6 +62,13 @@
 			justify-content: flex-end;
 			max-height: 70%;
 
+			>*{
+				@media screen and (max-width: $fg-sm) {
+					text-align: center;
+				}
+			}
+			
+
 		}
 
 		.slide-btn{
@@ -69,17 +80,29 @@
 			align-self:center;
 			text-align: center;
 			max-height: 3em;
-			@media screen and (max-width: $fg-lg - 1) {
+			flex-basis:3em;
+			display: flex;
+			min-width: 100%;
+			// @media screen and (max-width: $fg-lg - 1) {
 				align-self: stretch;
-			}
+			// }
 			@media screen and (max-width: $fg-md - 1) {
 				max-height: 6em;
+				flex-basis:6em;
 			}
 
 			.slide-link-btn{
 				display: inline-flex;
 				justify-content:space-between;
 				align-items:center;
+				align-self: stretch;
+				// flex-direction:row;
+				// flex-wrap: nowrap;
+
+				span{
+					white-space: nowrap;
+
+				}
 			}
 
 			
@@ -88,10 +111,10 @@
 		&.wide-image{
 			flex-wrap: wrap;
 			
-			.svg-graphics, .slide-text{
+			.svg-graphics{
 				
 				@extend .fg-col-xs-12;
-				flex-basis: 50%;
+				// flex-basis: 50%;
 				max-height: 40%;
 				max-height: calc(40vh - #{$space*6});
 
@@ -109,15 +132,19 @@
 
 			}
 
-			.slide-text, .slide-btn {
+			.slide-text {
 
 				flex-grow:1;
+				@extend .fg-col-xs-12;
+
+				
 
 			}
 
 			.slide-text{
 
 				align-items: center;
+				justify-content: center;
 				flex-direction:row;
 				flex-wrap: wrap;
 				@media screen and (max-height: 530px) {
@@ -135,7 +162,9 @@
 				h3{
 
 					// align-self: baseline;
-					text-align: right;
+					@media screen and (min-width: $fg-sm) {
+						text-align: right;	
+					}
 
 				}
 
@@ -143,9 +172,13 @@
 			}
 
 			.slide-btn{
+				
+				min-width: 0;
 
+				@extend .fg-col-xs-12;
 				@extend .fg-col-sm-6;
-
+				// @extend .fg-off-sm-3;
+				// align-self: center;
 
 			}
 		}
@@ -157,11 +190,11 @@
 				order:1;
 
 			}
-			.slide-btn{
+			// .slide-btn{
 
-				order:2;
+			// 	order:2;
 
-			}
+			// }
 
 			.svg-graphics{
 
@@ -176,11 +209,11 @@
 
 				}
 
-				.slide-btn{
+				// .slide-btn{
 
-					order:3;
+				// 	order:3;
 
-				}
+				// }
 			}
 
 		}
@@ -199,11 +232,11 @@
 
 			}
 
-			.slide-btn{
+			// .slide-btn{
 
-				order:2;
+			// 	order:2;
 
-			}
+			// }
 
 		}
 	}
@@ -263,8 +296,8 @@
 
 			h3 {
 			
-				font-family: $font-family-serif;
-				font-weight: bold;
+				font-family: $font-family-base;
+				font-weight: 900;
 
 			}
 
@@ -273,7 +306,7 @@
 		.slide-link-btn{
 
 			font-weight: bold;
-			letter-spacing: .1em;
+			// letter-spacing: .1em;
 			word-spacing: .1em;
 
 		}
@@ -315,8 +348,8 @@
 			// }
 
 			@media screen and (min-width: $fg-md) {
-				margin-left: $space;
-				margin-right: $space;
+				// margin-left: $space;
+				// margin-right: $space;
 			}
 
 			.slide-link-btn{
