--- a/client/styles/_menu.scss
+++ b/client/styles/_menu.scss
@@ -105,6 +105,7 @@
 
 //internal navigation spacing
 .current-level-navigation {
+  margin-top: $space*2;
   padding: $space;
 
   .item {
@@ -115,7 +116,7 @@
         padding: $space / 2;
       }
       .category-name {
-        margin-left: -.6em;
+        margin-left: -.1em;
       }
     }
     .item-list{
