scrollable slides on landing; removing momentum

--- a/client/partials/page-overlay.html
+++ b/client/partials/page-overlay.html
@@ -1,5 +1,7 @@
 <template name="pageOverlay">
-	{{#momentum plugin='fade' sKlass='page-overlay'}}
-		{{> Template.dynamic template=overlay}}
-	{{/momentum}}
+	<!-- {{#momentum plugin='fade' sKlass='page-overlay'}} -->
+		<div class="page-overlay">
+			{{> Template.dynamic template=overlay}}
+		</div>
+	<!-- {{/momentum}} -->
 </template>
