--- a/client/styles/_portfolio.scss
+++ b/client/styles/_portfolio.scss
@@ -874,7 +874,7 @@
 			}
 		}
 		.copy-right{
-
+			margin-bottom: $space;
 			.svg-icon{
 				margin-right: $space/2;
 			}
@@ -1074,111 +1074,168 @@ a{
 
 
 
-.page{
-	// .content-plate, .category-title{
-	// 	@include slideInLeft($duration:$duration);
-	// }
-	.animate-off-screen:not(.animate-in-progress){
-		display: none;
-	}
-	.gallery{
-		&, &.animate-in{
-			@include fadeIn($duration:$duration);		
-		}
-		&.animate-out{
-			@include fadeOut($duration:$duration);		
-		}
-	}
-	.project-cover, .project-page{
-		.content-plate{
-			&, &.animate-in{
-				@include slideInUp($duration:$duration);
-				&.full-height{
-					@include duration($duration*2);
-				}
-			}
-			&.animate-out{
-				@include slideOutDown($duration:$duration);
-				&.full-height{
-					@include duration($duration*2);
-				}
-			}
-		}
-		.date-container{
-			&, &.animate-in{
-				@include slideInDown($duration:$duration);
-			}
-			&.animate-out{
-				@include slideOutUp($duration:$duration);
-			}
-		}
-		.nav-container{
-			.mini-nav-btn{
-				@include slideInRight($delay:$delay/2, $duration:$duration);
-			}
-			.nav-plate{
-				@include slideInRight($duration:$duration);
-				@for $i from 0 through 2 {
-					&:nth-child(1n+#{$i}){
-						@media screen and (min-width: $fg-sm) {
-							@include delay($delay + $delay/2 * $i);
-						}
-					}
-				}
-			}
-			.title-plate{
-				@include slideInRight($delay:$delay*2, $duration:$duration);
-				@media screen and (min-width: $fg-sm) {
-					@include delay($delay);
-				}
-			}
+// .page{
+// 	// .content-plate, .category-title{
+// 	// 	@include slideInLeft($duration:$duration);
+// 	// }
+// 	.animate-off-screen:not(.animate-in-progress){
+// 		display: none;
+// 	}
+
+// 	.animate-in{
+// 		.mini-nav{
+// 			@include slideInDown($duration:$duration);
+// 		}
+// 		.mini-nav-btn{
+// 			@include slideInRight($duration:$duration);
+// 			@for $i from 1 through 10 {
+// 				&:nth-child(1n+#{$i}){
+// 					@include delay($delay/$i + $duration/$i);
+// 				}
+// 			}
+// 		}
+// 	}
+
+// 	.animate-out{
+// 		.mini-nav{
+// 			@include slideOutUp($duration:$duration);
+// 		}
+// 		.mini-nav-btn{
+// 			@include slideOutRight($duration:$duration);
+// 			@for $i from 1 through 10 {
+// 				&:nth-child(1n+#{$i}){
+// 					@include delay($delay*$i/2);
+// 				}
+// 			}
+// 		}
+// 	}
+// 	.gallery{
+// 		&, &.animate-in{
+// 			.item{
+// 				@include fadeIn($duration:$duration);
+
+// 				@for $i from 1 through 20 {
+// 					&:nth-child(1n+#{$i}){
+// 						@include delay($delay*$i);
+// 					}
+// 				}
+// 			}
+// 		}
+// 		&.animate-out{
+// 			.item{
+// 				@include fadeOut($duration:$duration);
+				
+// 				@for $i from 1 through 20 {
+// 					&:nth-child(1n+#{$i}){
+// 						@include delay($delay/$i);
+// 					}
+// 				}
+// 			}	
+// 		}
+// 	}
+// 	.project-cover, .project-page{
+// 		.content-plate{
+// 			&, &.animate-in{
+// 				@include slideInUp($duration:$duration);
+// 				&.full-height{
+// 					@include duration($duration*2);
+// 				}
+// 			}
+// 			&.animate-out{
+// 				@include slideOutDown($duration:$duration);
+// 				&.full-height{
+// 					@include duration($duration*2);
+// 				}
+// 			}
+// 		}
+// 		.date-container{
+// 			&, &.animate-in{
+// 				@include slideInDown($duration:$duration);
+// 			}
+// 			&.animate-out{
+// 				@include slideOutUp($duration:$duration);
+// 			}
+// 		}
+// 		.nav-container{
+// 			.nav-plate{
+// 				@include slideInRight($duration:$duration);
+// 				@for $i from 0 through 2 {
+// 					&:nth-child(1n+#{$i}){
+// 						@media screen and (min-width: $fg-sm) {
+// 							@include delay($delay + $delay/2 * $i);
+// 						}
+// 					}
+// 				}
+// 			}
+// 			.title-plate{
+// 				@include slideInRight($delay:$delay*2, $duration:$duration);
+// 				@media screen and (min-width: $fg-sm) {
+// 					@include delay($delay);
+// 				}
+// 			}
 
 			
-			.title-plate, .nav-plate, .mini-nav-btn{
-				@media screen and (max-width: $fg-sm - 1) {
-					@include animation-name(slideInDown);
-				}
-			}
-		}
-	}
-	.category-cover{
-		.item-list{
-			.item{
-				@include slideInRight($delay:$delay, $duration:$duration);
-				@for $i from 1 through 10 {
-					&:nth-child(1n+#{$i}){
-						@include delay($delay/2 * $i);
-					}
-				}
-			}
-		}
-		.mini-nav-btn{
-			@include slideInRight($delay:$delay, $duration:$duration);
-			@media screen and (max-width: $fg-sm - 1) {
-				@include animation-name(slideInDown);
-			}
-		}
-	}
-	.background{
-		&, &.animate-in{
-			@include fadeIn($duration:$duration, $delay:$delay);
-		}
-		&.animate-out{
-			@include fadeOut($duration:$duration, $delay:$delay);
-		}
-	}
-	.back-cover{
-		.keep-in-touch{
-			&.animate-sent{
-				@include lightSpeedOut($duration:$duration);
-				&.animate-error{
-					@include bounceInRight($duration:$duration);		
-				}
-			}
-			&.animate-error{
-				@include shake($duration:$duration*2, $delay:$duration);
-			}
-		}
-	}
-}
+// 			.title-plate, .nav-plate, .mini-nav-btn{
+// 				@media screen and (max-width: $fg-sm - 1) {
+// 					@include animation-name(slideInDown);
+// 					@include delay($delay);
+// 				}
+// 			}
+// 		}
+// 	}
+// 	.category-cover{
+
+// 		&.animate-in{
+// 			.item-list{
+// 				.item{
+// 					@include slideInDown($delay:$delay, $duration:$duration);
+// 					@for $i from 1 through 10 {
+// 						&:nth-child(1n+#{$i}){
+// 							@include delay($delay*$i + $duration/2);
+// 						}
+// 					}
+// 				}
+// 			}
+
+// 			.summary{
+// 				@include slideInLeft($delay:$delay*2, $duration:$duration);
+// 			}
+// 		}
+
+// 		&.animate-out{
+// 			.item-list{
+// 				.item{
+// 					@include slideOutUp($delay:$delay, $duration:$duration);
+// 					@for $i from 2 through 10 {
+// 						&:nth-child(1n+#{$i}){
+// 							@include delay($delay/$i);
+// 						}
+// 					}
+// 				}
+// 			}
+// 		}
+		
+// 	}
+// 	.background{
+// 		&, &.animate-in{
+// 			@include fadeIn($duration:$duration, $delay:$delay);
+// 		}
+// 		&.animate-out{
+// 			@include fadeOut($duration:$duration, $delay:$delay);
+// 		}
+// 	}
+// 	.back-cover{
+// 		.keep-in-touch{
+// 			&.animate-sent{
+// 				@include lightSpeedOut($duration:$duration);
+// 				&.animate-error{
+// 					@include bounceInRight($duration:$duration);		
+// 				}
+// 			}
+// 			&.animate-error{
+// 				@include shake($duration:$duration*2, $delay:$duration);
+// 			}
+// 		}
+// 	}
+// }
 
