--- a/client/partials/email.html
+++ b/client/partials/email.html
@@ -1,7 +1,9 @@
 <template name="emailOverlay">
-	{{#momentum plugin='animate-css' sKlass='email-overlay' timeout=5000}}
-		{{> Template.dynamic template=dialog}}
-	{{/momentum}}
+	<!-- {{#momentum plugin='animate-css' sKlass='email-overlay' timeout=5000}} -->
+	<div class="email-overlay">
+		{{> Template.dynamic template=dialog}}		
+	</div>
+	<!-- {{/momentum}} -->
 </template>
 
 <template name="composeEmail">
