--- a/client/styles/_landing.scss
+++ b/client/styles/_landing.scss
@@ -86,6 +86,7 @@
 
 			justify-content: center;
 			flex-grow:2;
+			min-width: 50%;
 			@media screen and (min-width: $fg-md) {
 				max-height: calc(100vh - #{$space*10});
 				// flex-basis: 100vh;
@@ -93,6 +94,7 @@
 			}
 			@media screen and (max-width: $fg-sm - 1) {
 				max-height: calc(60vh - #{$space*10});
+				min-width: 100%;
 				
 			}
 
